# Shroomleur

./: .env.example  Dockerfile  LICENSE  QUICK_START.md  README.md  create_fake_users.py  docker-compose.yml  pyproject.toml  requirements.txt  start.cmd  start.sh  test_api.py  test_leveling_static.py
.github/workflows/: docker-deploy.yml
backend/app/: database.py  dependencies.py  main.py
backend/app/api/: __init__.py
backend/app/api/routes/: __init__.py  auth.py  history.py  users.py
backend/app/core/: config.py  leveling.py  security.py
backend/app/models/: __init__.py  identification_history.py  user.py
backend/app/schemas/: __init__.py  identification_history.py  user.py
test/: test_api.py  test_leveling_static.py  test_security_core.py  test_users_profile_routes.py
